#All exported headers
nobase_include_HEADERS = \
    opx/nas_ndi_acl_utl.h \
    opx/nas_ndi_int.h \
    opx/nas_ndi_port_map.h \
    opx/nas_ndi_qos_utl.h \
    opx/nas_ndi_event_logs.h \
    opx/nas_ndi_mac_utl.h \
    opx/nas_ndi_port_utils.h \
    opx/nas_ndi_utils.h \
    opx/nas_ndi_fc_init.h \
    opx/nas_ndi_map.h \
    opx/nas_ndi_sw_profile.h \
    opx/nas_ndi_udf_utl.h \
    opx/nas_ndi_vlan_util.h \
    opx/nas_ndi_obj_cache.h \
    opx/nas_ndi_obj_cache_utils.h \
    opx/nas_ndi_stg_util.h \
    opx/nas_ndi_bridge_port.h \
    opx/nas_ndi_tunnel_map.h  \
    opx/nas_ndi_tunnel_obj.h
