#
# Copyright (c) 2019 Dell Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may
# not use this file except in compliance with the License. You may obtain
# a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
#
# THIS CODE IS PROVIDED ON AN *AS IS* BASIS, WITHOUT WARRANTIES OR
# CONDITIONS OF ANY KIND, EITHER EXPRESS OR IMPLIED, INCLUDING WITHOUT
# LIMITATION ANY IMPLIED WARRANTIES OR CONDITIONS OF TITLE, FITNESS
# FOR A PARTICULAR PURPOSE, MERCHANTABLITY OR NON-INFRINGEMENT.
#
# See the Apache Version 2.0 License for specific language governing
# permissions and limitations under the License.
#

#All exported headers
nobase_include_HEADERS = \
    opx/nas_ndi_acl_utl.h \
    opx/nas_ndi_int.h \
    opx/nas_ndi_port_map.h \
    opx/nas_ndi_qos_utl.h \
    opx/nas_ndi_event_logs.h \
    opx/nas_ndi_mac_utl.h \
    opx/nas_ndi_port_utils.h \
    opx/nas_ndi_utils.h \
    opx/nas_ndi_fc_init.h \
    opx/nas_ndi_map.h \
    opx/nas_ndi_sw_profile.h \
    opx/nas_ndi_udf_utl.h \
    opx/nas_ndi_vlan_util.h \
    opx/nas_ndi_obj_cache.h \
    opx/nas_ndi_obj_cache_utils.h \
    opx/nas_ndi_stg_util.h \
    opx/nas_ndi_bridge_port.h \
    opx/nas_ndi_tunnel_map.h  \
    opx/nas_ndi_tunnel_obj.h \
    opx/nas_ndi_ipmc_utl.h \
    opx/nas_ndi_router_interface_utl.h
